test/files/pos/java-type-annotations/Test.java
public class Test {
	static class C<@NotNull T> {};
	@NotNull String foo() { return ""; }
}
